# raspinfo-apps

./: LICENSE  README.md
icalmanager/: .gitignore  config.JSON  settings.JSON
icalmanager/src/: dbmanager.py  icalparser.py  main.py
icalmanager/test/: DBTests.py  ParseTests.py  calendar_data.ics  db_variables.py  keywords.resource  parser_variables.py  tests_db.robot  tests_parser.robot
infoscreen/: CMakeLists.txt  config.JSON  event_data.db
infoscreen/src/: CMakeLists.txt  InfoScreen.qml  InfoScreen.qrc  dbaccess.cpp  dbaccess.h  listmodel.cpp  listmodel.h  main.cpp
infoscreen/src/components/: EventDelegate.qml  formDateString.js
simple-qt/: CMakeLists.txt  README.md
simple_qt/: CMakeLists.txt  main.cpp
